<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"

    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="#d1c8c6">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/layout_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <android.support.v7.widget.Toolbar
                android:id="@+id/settings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

            <TextView
                android:id="@+id/userPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/user_preferences"
                android:textColor="#098373"
                android:textSize="18dp"/>

            <CheckBox
                android:id="@+id/checkNotificationBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:button="@null"
                android:checked="true"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/notif_in_stat_bar"
                android:textSize="18dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/analog_timer"
                android:textOff="Digital Timer"
                android:textColor="#000"
                android:textOn="Analog Timer"
                android:textSize="18dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textColor="#000"
                android:text="@string/choose_lang"
                android:textSize="18dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/flag_az"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="2dp"
                    android:background="@null"
                    android:onClick="handleFlagAz"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/flag_az"/>

                <ImageButton
                    android:id="@+id/flag_en"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:onClick="handleFlagEn"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/flag_en"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:paddingTop="20dp"
                android:text="@string/select_alarm_sound"
                android:textColor="#098373"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:paddingTop="20dp"
                android:text="@string/change_sound"
                android:textColor="#000"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/alarm_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:paddingTop="20dp"
                android:text="@string/tick_sound"
                android:textColor="#000"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/alarm_list2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>


    </RelativeLayout>

</ScrollView>