<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#120f0d">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/my_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--android:theme="?attr/actionBarTheme">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Time Manager"-->
        <!--android:textSize="30dp"-->
        <!--android:textColor="#FFFF"-->
        <!--android:layout_gravity="center"-->
        <!--android:id="@+id/toolbar_title" />-->
    <!--</android.support.v7.widget.Toolbar>-->


        <NumberPicker
        android:id="@+id/np_pomodoro"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_alignStart="@+id/welcomeTextView"
        android:layout_centerVertical="true"
        android:layout_marginStart="11dp"
        android:descendantFocusability="blocksDescendants"
        android:solidColor="#383534"
        android:soundEffectsEnabled="true">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/np_short"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:descendantFocusability="blocksDescendants"
        android:layout_alignBaseline="@+id/np_pomodoro"
        android:layout_alignBottom="@+id/np_pomodoro"
        android:layout_centerHorizontal="true"
        android:solidColor="#383534"
        android:soundEffectsEnabled="true">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/np_long"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_alignBaseline="@+id/np_short"
        android:layout_alignBottom="@+id/np_short"
        android:layout_alignParentEnd="true"
        android:layout_alignRight="@+id/np_short"
        android:descendantFocusability="blocksDescendants"
        android:layout_marginEnd="11dp"
        android:solidColor="#383534"
        android:soundEffectsEnabled="true">


    </NumberPicker>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pomodoro"
        android:layout_marginEnd="16dp"
        android:textColor="#fff"
        android:layout_below="@+id/np_pomodoro"
        android:layout_alignEnd="@+id/np_pomodoro"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:text="@string/short_break"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_break"
        android:textColor="#fff"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignEnd="@+id/np_long"
        android:layout_marginEnd="12dp"/>


    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:fontFamily="Arial"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/intro_words"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <ImageButton
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:onClick="startToCount"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/start_button"/>

        <fragment
        android:id="@+id/fragment_about"
        android:name="com.antech.timemanagement.AboutFragment"
        android:layout_width="0dip"
        android:layout_weight="0.50"
        android:layout_height="fill_parent" >

    </fragment>

        <fragment
            android:id="@+id/fragment_settings"
            android:name="com.antech.timemanagement.SettingsActivity"
            android:layout_width="0dip"
            android:layout_weight="0.50"
            android:layout_height="fill_parent" >

        </fragment>

    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>



</FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_first"
        app:headerLayout="@layout/nav_header"
        android:fitsSystemWindows="true" >

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>